# NSO-GameCube-Controller-Pairing-App

./: .gitignore  CLAUDE.md  DIAGRAMS.md  GC-Controller-Enabler.spec  LICENSE_MIT_HidLibrary  NSO-GameCube-Controller-Pairing-App.spec  NSO_GC_BLE_PROTOCOL.md  PENDING_TESTING.md  README.md  build_all.py  build_linux.sh  controller.icns  gc_controller_enabler.py  gc_controller_enabler.spec  gc_controller_settings.json  pyproject.toml  requirements.txt  virtual_gamepad.py
.github/workflows/: build-macos.yml  build-windows.yml  release.yml
WinFormsApp1/: App.config  Form1.Designer.cs  Form1.cs  Settings1.Designer.cs  Settings1.settings  WinFormsApp1.csproj
platform/linux/: 99-gc-controller.rules  build.sh  install.sh  nso-gc-controller.desktop
platform/macos/: build.sh
platform/windows/: build.bat
scripts/: render_controller_assets.py
src/gc_controller/: __main__.py  app.py  calibration.py  connection_manager.py  controller_constants.py  controller_slot.py  controller_ui.py  emulation_manager.py  input_processor.py  settings_manager.py  ui_ble_dialog.py  ui_controller_canvas.py  ui_settings_dialog.py  ui_theme.py  virtual_gamepad.py
src/gc_controller/ble/: __init__.py  ble_event_loop.py  ble_subprocess.py  bleak_backend.py  bleak_subprocess.py  bumble_backend.py  sw2_protocol.py
