[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gc-controller"
version = "1.0.0"
description = "NSO GameCube Controller Pairing App - Xbox 360 emulation for GC controllers"
requires-python = ">=3.12"
dependencies = [
    "hidapi>=0.14.0",
    "pyusb>=1.2.1",
    "customtkinter>=5.2.0",
    "Pillow>=9.0.0",
    "pystray>=0.19.0",
    "vgamepad>=0.0.8; sys_platform == 'win32'",
    "evdev>=1.7.0; sys_platform == 'linux'",
    "bleak>=0.21.0; sys_platform == 'darwin'",
    "bleak>=0.21.0; sys_platform == 'win32'",
    "pyobjc-framework-Cocoa>=9.0; sys_platform == 'darwin'",
]

[project.scripts]
gc-controller = "gc_controller.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gc_controller = ["assets/controller/*.png", "fonts/*.ttf"]
